Revert module change

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
   <script src="js/stations-dist.js"></script>
   <script src="js/scrobbler.js"></script>
-  <script type="module" src="js/main.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Matomo -->
   <script>
