--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
                           <option value="public">Public</option>
                           <option value="corp">Corporate</option>
                           <option value="online">Online only</option>
+                          <option value="soma">SomaFM Stations</option>
+                        </select>
+
+                        <select id="tagGenre" onchange="generateRadioButtons(this.value)">
+                          <option value="all">All Genres</option>
+                          <option value="indie">Indie</option>
+                          <option value="alt">Alternative</option>
                         </select>
                       </div>
                     </div>
