--- a/mytuner.html
+++ b/mytuner.html
@@ -15,7 +15,7 @@
     mytuner_scripts["player-v1.js"] = function() {};
     var s = document.createElement("script");
     s.type = "text/javascript";
-    s.src = "https://mytuner-radio.com/static/js/widgets/player-v1.js";
+    s.src = "/js/external/player-v1.js";
     s.defer = true;
     if (s.readyState) { //IE
       s.onreadystatechange = function() {
