--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                           <option value="npr">NPR</option>
                           <option value="aaa">AAA</option>
                           <option value="college">College</option>
+                          <option value="community">Community</option>
                           <option value="public">Public</option>
                           <option value="corp">Corporate</option>
                           <option value="online">Online only</option>
@@ -209,6 +210,7 @@
                           <option value="all">All Genres</option>
                           <option value="indie">Indie</option>
                           <option value="alt">Alternative</option>
+                          <option value="soul">Soul</option>
                         </select>
                       </div>
                     </div>
