Update playlist URL

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <a href="https://github.com/jbwharris/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-github" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio GitHub repository</span></a><a href="https://bsky.app/profile/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-bluesky ml-1" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio Bluesky account</span></a></p>
                 <p class="fs-6">Monthly ScrobbleRadio Mix<br />
                   discovery playlist<br />
-                  <a href="https://music.apple.com/ca/playlist/jaybeedub-mixtape/pl.u-dkelCypyBM" class="iconLink"><i class="icon-apple" aria-hidden="true"></i><span class="visually-hidden">opens Apple Music JayBeeDub Mixtape in a new tab</span></a>
+                  <a href="https://music.apple.com/ca/playlist/scrobbleradio-mix/pl.u-dkelCypyBM" class="iconLink"><i class="icon-apple" aria-hidden="true"></i><span class="visually-hidden">opens Apple Music ScrobbleRadio Mix in a new tab</span></a>
                   <a href="https://open.spotify.com/playlist/2MJuX8Lx1IyvEzSXTcUw42?go=1&sp_cid=1b8011ab28a385db6cd8f67005590e9d" class="iconLink"><i class="icon-spotify" aria-hidden="true" target="_blank"></i><span class="visually-hidden">opens Spotify Music JayBeeDub Mixtape in a new tab</span></a>
                 </p>
 
@@ -189,6 +189,7 @@
                         <select id="tagCountry" onchange="generateRadioButtons(this.value)">
                           <option value="all">All Countries</option>
                           <option value="au">Australia 🇦🇺</option>
+                          <option value="be">Belgium 🇧🇪</option>
                           <option value="ca">Canada 🇨🇦</option>
                           <option value="us">United States 🇺🇸</option>
                           <option value="uk">United Kingdom 🇬🇧</option>
@@ -213,8 +214,9 @@
 
                         <select id="tagGenre" onchange="generateRadioButtons(this.value)">
                           <option value="all">All Genres</option>
-                          <option value="indie">Indie</option>
                           <option value="alt">Alternative</option>
+                          <option value="chill">Chill</option>
+                          <option value="indie">Indie</option>
                           <option value="soul">Soul</option>
                         </select>
                       </div>
