--- a/index.html
+++ b/index.html
@@ -117,51 +117,52 @@
                     </div>
                   </div>
                 </div>
-                iv class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    How does Apple Carplay support work?
-                  </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
-                  <div class="accordion-body">
-                    <p>This website can be used with Apple Carplay and pretty much anywhere else that supports the mediaSession API. While this is an web app that can be run anywhere, it does have some playback quirks when being used in a car. This app relies on the built-in Now Playing app in Carplay to show the song data. Unfortunately there doesn't seem to be anything similar for Android Auto 🤷🏼‍♂️</p>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      How does Apple Carplay support work?
+                    </button>
+                  </h2>
+                  <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      <p>This website can be used with Apple Carplay and pretty much anywhere else that supports the mediaSession API. While this is an web app that can be run anywhere, it does have some playback quirks when being used in a car. This app relies on the built-in Now Playing app in Carplay to show the song data. Unfortunately there doesn't seem to be anything similar for Android Auto 🤷🏼‍♂️</p>
 
-                    <ul>
-                      <li>Playback on iOS can be initiated before you start driving. Simply open the site in Safari, pick a station and playback should start and the song, artist, station name and album cover should be visible on screen.</li>
-                      <li>You can use the in-car media controls to switch between stations. Playback will continue for the current station until the new audio stream begins loading. There is an on-screen notice of what station is loading. You can skip multiple stations if you're looking for a particular station.</li>
-                      <li>If playback stops while driving due to poor mobile data coverage, the app will keep trying to load the feed. If it pauses for awhile, try skipping to the next station and back again and it should initiate a new session. As iOS only allows access to play/pause, next and previous track, unfortunately there's no way to reload a feed directly with Carplay.</li>
-                      <li>Resume playback after leaving the car and coming back seems to be hit-and-miss. If it's been a short period of time, it will sometimes just resume playing the session. Otherwise you'll just need to go into Safari and start playing music again.</li>
-                      <li><em>Be sure to obey local traffic laws and not use your phone while driving.</em></li>
-                    </ul>
+                      <ul>
+                        <li>Playback on iOS can be initiated before you start driving. Simply open the site in Safari, pick a station and playback should start and the song, artist, station name and album cover should be visible on screen.</li>
+                        <li>You can use the in-car media controls to switch between stations. Playback will continue for the current station until the new audio stream begins loading. There is an on-screen notice of what station is loading. You can skip multiple stations if you're looking for a particular station.</li>
+                        <li>If playback stops while driving due to poor mobile data coverage, the app will keep trying to load the feed. If it pauses for awhile, try skipping to the next station and back again and it should initiate a new session. As iOS only allows access to play/pause, next and previous track, unfortunately there's no way to reload a feed directly with Carplay.</li>
+                        <li>Resume playback after leaving the car and coming back seems to be hit-and-miss. If it's been a short period of time, it will sometimes just resume playing the session. Otherwise you'll just need to go into Safari and start playing music again.</li>
+                        <li><em>Be sure to obey local traffic laws and not use your phone while driving.</em></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePwa" aria-expanded="false" aria-controls="collapsePwa">
+                      Can I install this app on my phone?
+                    </button>
+                  </h2>
+                  <div id="collapsePwa" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      <p>ScrobbleRadio is what is called a Progressive Web App (PWA). It can be installed on your phone's homescreen and act similar to the way a regular phone app does. This will allow you to access ScrobbleRadio without seeing the browser URL bar and utilize the whole screen.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePrivacy" aria-expanded="false" aria-controls="collapsePrivacy">
+                      Does ScrobbleRadio store any of my data?
+                    </button>
+                  </h2>
+                  <div id="collapsePrivacy" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      <p>ScrobbleRadio uses a privacy focused analytics software called <a href="https://matomo.org/">Matomo</a>. It respects do not track user settings in browsers. It is kinda cool seeing what stations are popular and being listened to.</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePwa" aria-expanded="false" aria-controls="collapsePwa">
-                    Can I install this app on my phone?
-                  </button>
-                </h2>
-                <div id="collapsePwa" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
-                  <div class="accordion-body">
-                    <p>ScrobbleRadio is what is called a Progressive Web App (PWA). It can be installed on your phone's homescreen and act similar to the way a regular phone app does. This will allow you to access ScrobbleRadio without seeing the browser URL bar and utilize the whole screen.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePrivacy" aria-expanded="false" aria-controls="collapsePrivacy">
-                    Does ScrobbleRadio store any of my data?
-                  </button>
-                </h2>
-                <div id="collapsePrivacy" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
-                  <div class="accordion-body">
-                    <p>ScrobbleRadio uses a privacy focused analytics software called <a href="https://matomo.org/">Matomo</a>. It respects do not track user settings in browsers. It is kinda cool seeing what stations are popular and being listened to.</p>
-                  </div>
-                </div>
-              </div>
-              <d </div> <footer class="p-3 text-center text-md-left">
+              <footer class="p-3 text-center text-md-left">
 
                 <small>Scrobbling Beta</small>
                 <button id="lastfm-auth"><i class="icon-lastfm"></i> Login with Last.fm</button>
@@ -176,7 +177,7 @@
                 </p>
 
                 <div id="mt-box"></div>
-                </footer>
+              </footer>
             </div>
 
             <div class="col col-xxl-8 col-md-6 panels" id="panel2">
